--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a params validator for koa-router",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "mocha test/middleware.test.js"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,11 @@
   },
   "homepage": "https://github.com/zhangjialegh/koa-router-validator",
   "devDependencies": {
-    "jest": "^26.6.3",
     "koa": "^2.13.1",
-    "koa-router": "^10.0.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.0.0",
+    "mocha": "^8.2.1",
+    "supertest": "^6.0.1"
   },
   "dependencies": {},
   "engines": {
